--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "chart.js": "^4.5.0",
     "daisyui": "^5.0.43",
     "tailwindcss": "^4.1.8"
   },
