--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/svelte-virtual": "^3.13.12",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "chart.js": "^4.5.0",
