--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@sveltejs/kit": "^2.9.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tauri-apps/cli": "^2",
+    "lefthook": "^1.12.3",
     "prettier": "3.6.2",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
