--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@tauri-apps/cli": "^2",
     "@types/mathjs": "^9.4.1",
     "lefthook": "^1.12.3",
-    "prettier": "3.6.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "typescript": "~5.6.2",
