--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 .direnv
-.DS_Store
 node_modules
-/build
-/.svelte-kit
-/package
+.svelte-kit
 .env
-.env.*
-!.env.example
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
+
+build/bin
+frontend/build
