--- a/package.json
+++ b/package.json
@@ -1,41 +1,15 @@
 {
   "name": "raxcel",
-  "version": "0.1.0",
-  "description": "",
+  "module": "index.ts",
   "type": "module",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "tauri": "tauri",
-    "format": "bunx prettier . --write"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.8",
-    "@tanstack/svelte-virtual": "^3.13.12",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2",
-    "chart.js": "^4.5.0",
-    "daisyui": "^5.0.43",
-    "math.js": "^1.1.46",
-    "tailwindcss": "^4.1.8",
-    "xlsx": "^0.18.5"
-  },
+  "private": true,
   "devDependencies": {
-    "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.9.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@tauri-apps/cli": "^2",
-    "@types/mathjs": "^9.4.1",
+    "@types/bun": "latest",
     "lefthook": "^1.12.3",
     "prettier": "^3.6.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3"
+    "prettier-plugin-svelte": "^3.4.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5"
   }
 }
