--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,9 +1,5 @@
 GEMINI_API_KEY=your_api_key
 RESEND_API_KEY=
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=user
-DB_PASSWORD=passw0rd
-DB_NAME=mydb
 API_URL=http://localhost:8080
 SECRET_KEY=
+DATABASE_URL=postgres://user:passw0rd@localhost:5432/mydb?sslmode=disable&TimeZone=Asia/Singapore
