--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "raxcel",
   "module": "index.ts",
   "scripts": {
+    "dev": "concurrently 'cd desktop && wails dev -tags webkit2_41' 'cd server && go run main.go' 'docker compose up'",
     "format": "bunx prettier . --write"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "concurrently": "^9.2.1",
     "lefthook": "^1.12.3",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0"
