--- a/desktop/frontend/package.json
+++ b/desktop/frontend/package.json
@@ -10,7 +10,8 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "tauri": "tauri",
-    "format": "bunx prettier . --write"
+    "format": "bunx prettier . --write",
+    "test": "vitest"
   },
   "license": "MIT",
   "dependencies": {
@@ -33,6 +34,7 @@
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "typescript": "~5.6.2",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vitest": "^4.0.16"
   }
 }
