--- a/desktop/frontend/package.json
+++ b/desktop/frontend/package.json
@@ -11,7 +11,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "tauri": "tauri",
     "format": "bunx prettier . --write",
-    "test": "vitest"
+    "test": "bunx vitest"
   },
   "license": "MIT",
   "dependencies": {
@@ -26,9 +26,13 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/kit": "^2.9.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tauri-apps/cli": "^2",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/svelte": "^5.2.10",
     "@types/mathjs": "^9.4.1",
+    "@vitest/ui": "^4.0.16",
+    "jsdom": "^27.3.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "typescript": "~5.6.2",
